Updated OpenGL shader program, still not done yet

--- a/ShaderProgram/Makefile
+++ b/ShaderProgram/Makefile
@@ -1,6 +1,6 @@
 SOURCE = shaderTest.cpp ShaderProgram.cpp controls.cpp
 
-FLAGS = -L /usr/lib -lglfw -lGLEW -lGL
+FLAGS = -L /usr/lib -lglfw -lGLEW -lGL -lSOIL
 
 all: $(SOURCE) 
 	g++ $(SOURCE) -o shaderTest $(FLAGS)
