--- a/SurfaceMapper/Makefile
+++ b/SurfaceMapper/Makefile
@@ -3,8 +3,8 @@ ld = g++
 cflags = -lm -c
 lflags = `pkg-config --cflags --libs opencv` -lm
 
-src = surfaceMapper.cpp ProcGen.cpp ActiveStereoMap.cpp ActiveCalib.cpp gray_lookup.cpp
-obj = surfaceMapper.o ProcGen.o ActiveStereoMap.o ActiveCalib.o gray_lookup.o
+src = surfaceMapper.cpp ProcGen.cpp ActiveStereoMap.cpp ActiveCalib.cpp Reconstructor.cpp gray_lookup.cpp
+obj = surfaceMapper.o ProcGen.o ActiveStereoMap.o ActiveCalib.o Reconstructor.o gray_lookup.o
 exe = surfaceMapper
 
 all: $(exe)
